# Scout_UR3E_Repo

./: README.md  setup_run_commands.sh
coverage_wp_planner/: CMakeLists.txt  package.xml
coverage_wp_planner/launch/: waypoint2twist.launch
coverage_wp_planner/scripts/: DFS.py  add_two_ints_client.py  add_two_ints_server.py  behaviour_tracker.py  nx_dfs.py  wp2twist_client.py  wp2twist_server.py
coverage_wp_planner/srv/: GoToWP.srv
coverage_wp_planner/tests/: moat_and_plot.py
object_spawner/config/: models.yaml
object_spawner/launch/: obj_spawner_test.launch
object_spawner/models/: box.sdf
object_spawner/scripts/: object_spawner.py  object_spawner_test.py
scout_ur3e/: CMakeLists.txt  package.xml
scout_ur3e/launch/: amcl.launch  display_scout_ur3e.launch  scout_ur3e_empty_world.launch  scout_ur3e_gmapping.launch  scout_ur3e_manip.launch  scout_ur3e_move_base.launch  scout_ur3e_navigation.launch  scout_ur3e_slam.launch
scout_ur3e/maps/: scout_map.pgm
scout_ur3e/not_srv/: GoToManipJoints.srv
scout_ur3e/params/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  (+4 more)
scout_ure/: CMakeLists.txt  package.xml
universal_robot/ur3e_moveit_config/: CMakeLists.txt  package.xml
universal_robot/ur3e_moveit_config/config/: joint_limits.yaml  kinematics.yaml  ur3e.srdf
universal_robot/ur3e_moveit_config/launch/: ik_manip_service.launch
universal_robot/ur3e_moveit_config/scripts/: UR3E_ik_manip.py  ur3e_ik_manip.py
universal_robot/ur3e_moveit_config/srv/: GoToManipGP.srv  ResetJoints.srv
(+64 files in other folders)
